database/base/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-db-service
  namespace: database
  annotations:
    external-dns.alpha.kubernetes.io/hostname: immich-db.ysonsuperhomelab.com
spec:
  type: NodePort
  selector:
    cnpg.io/cluster: immich-db
    cnpg.io/instanceRole: primary
  ports:
    - name: postgres
      port: 5432 # The port exposed internally
      targetPort: 5432 # The port your container listens on
      nodePort: 32002 # A fixed port on the node; choose one that is available
